--- a/app/src/main/res/layout/activity_pending.xml
+++ b/app/src/main/res/layout/activity_pending.xml
@@ -9,6 +9,37 @@
     tools:context=".Pending_Orders"
     tools:openDrawer="start">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:navigationIcon="@drawable/menu" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="Pending Orders"
+            android:textColor="@color/black"
+            android:textSize="40sp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/pending_List"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+
+
+    </LinearLayout>
+
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_bar"
         android:layout_width="wrap_content"
@@ -21,36 +52,6 @@
 
         app:menu="@menu/main" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:navigationIcon="@drawable/menu" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="10dp"
-                android:text="Pending Orders"
-                android:textColor="@color/black"
-                android:textSize="40sp" />
-
-            <ListView
-                android:id="@+id/porderList"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-    </ScrollView>
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
