--- a/app/src/main/res/layout/navi.xml
+++ b/app/src/main/res/layout/navi.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:background="#5680F9"
+    android:background="@color/blue"
     android:layout_marginStart="40dp"
     android:id="@+id/nav_view"
     >
@@ -18,7 +18,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="John Doe"
+
         android:layout_gravity="center"
         android:textColor="@color/white"
         android:textSize="24sp"
