--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -29,6 +29,12 @@
             android:id="@+id/nav_history"
             android:title="History"
             android:icon="@drawable/history"/>
+
+
+        <item
+            android:id="@+id/nav_logout"
+            android:title="Logout"
+            />
     </group>
 
 
