--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,7 +4,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_activeorder"
-            android:title="Profile"
+            android:title="Active Order"
             android:icon="@drawable/profile"
             />
 
