--- a/app/src/main/res/layout/navi.xml
+++ b/app/src/main/res/layout/navi.xml
@@ -18,7 +18,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:id="@+id/nav_username"
         android:layout_gravity="center"
         android:textColor="@color/white"
         android:textSize="24sp"
