--- a/app/src/main/res/layout/navi.xml
+++ b/app/src/main/res/layout/navi.xml
@@ -9,14 +9,16 @@
     android:id="@+id/nav_view"
     >
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/profilePic"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_gravity="center"
-        android:background="@drawable/ic_launcher_background"
+        android:background="@drawable/avatar"
         />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_margin="10dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/nav_username"
         android:layout_gravity="center"
