--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,7 @@
         android:id="@+id/login_photo"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:background="@drawable/logo"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toTopOf="@+id/login_mail"
         app:layout_constraintEnd_toEndOf="parent"
