--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -34,6 +34,7 @@
         <item
             android:id="@+id/nav_logout"
             android:title="Logout"
+            android:icon="@drawable/logout"
             />
     </group>
 
